--- a/index.css
+++ b/index.css
@@ -198,6 +198,12 @@ form{
        
       }
     }
+.footer{
+    background-color: rgba(11, 10, 10,0.5);
+    height: 300px;
+    width: 100%;
+    
+}
     
 
 
